Ошибка описания типа данных
В первом примере кода используется тип данных const:

     const distance = calculateDistance('Lannisport', 'Bayasabhad');

Затем идёт предложение:

    В переменную distance записывается результат вычисления выражения.

"В переменную", хотя в примере используется константа. Поэтому заменил слово "переменную" на слово "константу"

--- a/modules/35-calling-functions/150-expression/description.ru.yml
+++ b/modules/35-calling-functions/150-expression/description.ru.yml
@@ -24,7 +24,7 @@ theory: |
   const distance = calculateDistance('Lannisport', 'Bayasabhad');
   ```
 
-  В переменную `distance` записывается результат вычисления выражения. В отличие от операций (например, `10 + 12`), где явно видно, какое вычисление производится, в функциях само вычисление скрыто от нас, и мы видим только результат. Поэтому говорят, что функция «возвращает» значение. Можно применить эту терминологию и к обычным операциям. Например, сказать, что конкатенация двух строк возвращает новую строку.
+  В константу `distance` записывается результат вычисления выражения. В отличие от операций (например, `10 + 12`), где явно видно, какое вычисление производится, в функциях само вычисление скрыто от нас, и мы видим только результат. Поэтому говорят, что функция «возвращает» значение. Можно применить эту терминологию и к обычным операциям. Например, сказать, что конкатенация двух строк возвращает новую строку.
 
   *Что является выражением, а что нет?* Сейчас может казаться, что это одна из скучных деталей из учебника по программированию. Но это действительно важный вопрос. Всё, что работает как выражение, может быть использовано в других выражениях, а также во всех местах, где на вход ожидаются выражения. Распознавать выражения в коде — важный навык, необходимый программисту каждый день.
 
